[package]
name = "diva_db"
version = "0.1.0"
edition = "2024"

[dependencies]
binary_parser = { git = "https://github.com/vixen256/binary_parser" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "database_converter"
path = "examples/database_converter.rs"
required-features = ["serde"]
