[package]
name = "diva_db"
version = "0.1.0"
edition = "2024"

[dependencies]
binary_parser = { git = "https://github.com/vixen256/binary_parser" }
cfg_eval = { version = "0.1", optional = true }
pyo3 = { version = "0.26", features = ["abi3-py37", "extension-module", "generate-import-lib"], optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "database_converter"
path = "examples/database_converter.rs"
required-features = ["serde"]

[features]
pyo3 = ["dep:pyo3", "dep:cfg_eval"]
